# py-package-format

./: Cargo.toml  LICENSE  README.md
.github/workflows/: package.yml
src/: lib.rs
