[package]
name = "py-package-format"
version = "0.0.1"
edition = "2021"
description = "A Cookiecutter project template for Rust projects"
authors = ["Jan Bronicki janbronicki@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]


[dev-dependencies]
